# mayormind

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: catalog.csv
src/data_preprocessing/: build_catalog.py  download_files.py
